--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>5.5.13</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.itextpdf</groupId>-->
+<!--            <artifactId>itext7-core</artifactId>-->
+<!--            <version>7.1.16</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
 </project>
